# livestatic

./: .gitignore  .pypirc  README.md  pyproject.toml
livestatic/: config.py  serve.py  urls.py  webapp.py
livestatic/v/: t.html
livestatic/views/: exceptions.py  responses.py
src/: yankee.py
