[build-system]
requires = ["hatchling","colorama"]
build-backend = "hatchling.build"

[project]
name = "livestatic"
version = "0.0.5"
authors = [
  { name="ngdream", email="nguewofoss@gmail.com" },
]
description = "serve static page very easily"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ngdream/livestatic"
"Bug Tracker" = "https://github.com/ngdream/livestatic/issues"